# charfinder

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Makefile  README.md  README2.md  pyproject.toml  sample.env
.github/workflows/: badge-refresh.yml  tests.yml
docs/testing/: README.md  demo.ipynb
src/: cli.py  core.py
src/charfinder/: __init__.py  __main__.py  cache.py  cli.py  constants.py  core.py  fuzzymatchlib.py  log_test.py  settings.py  types.py
src/charfinder/cli/: __init__.py  args.py  cli_main.py  diagnostics.py  diagnostics_match.py  handlers.py  parser.py  utils_runner.py
src/charfinder/core/: __init__.py  core_main.py  finders.py  matching.py  name_cache.py  unicode_data_loader.py
src/charfinder/utils/: formatter.py  logger.py  logger_helpers.py  logger_objects.py  logger_setup.py  logger_styles.py  normalizer.py
tests/: conftest.py  test_cli.py  test_constants.py  test_fuzzymatchlib.py  test_lib.py  test_settings.py  test_types.py
tests/cli/: test_diagnostics.py
tests/helpers/: conftest_helpers.py
tests/manual/: README.md  demo.ipynb
tests/utils/: test_formatter.py  test_logger_helpers.py
