[project]
name = "charfinder"
version = "0.1.0"
description = "CLI tool to search Unicode characters by name with fuzzy matching support."
authors = [
    { name = "HMDV" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
charfinder = "charfinder.cf_cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"